# host-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  hosts  install.sh  setup.sh  uninstall.sh
crates/cli/: Cargo.toml
crates/cli/src/: cli_ops.rs  lib.rs
crates/cli/src/commands/: add.rs  mod.rs
crates/host/: Cargo.toml
crates/host-rs/: Cargo.toml
crates/host-rs/src/: cli.rs  main.rs
crates/host-utils/: Cargo.toml
crates/host-utils/src/: blocker.rs  comment.rs  container.rs  db.rs  etc_host_writer.rs  h.rs  host_collections.rs  host_reader.rs  lib.rs  list.rs  list_writer.rs  r.rs  scanner.rs  storage_path.rs  utils.rs
crates/host-utils/tests/: app.rs  app_block_valid_host.rs  app_insert_block.rs  etc_host_reader.rs  h.rs  r.rs
crates/host/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  utils.rs
scripts/: build  build_installer  func.sh  install  setup  test
src/: app.rs  lib.rs  main.rs
src/app_data/: mod.rs  my_csv.rs  paths.rs  usr.rs
src/app_data/data/: get.rs  mod.rs  myerr.rs
src/cli/: ads.rs  fakenews.rs  gambling.rs  mod.rs  options.rs  porn.rs  redirect.rs  rm.rs  social.rs  update.rs  web.rs
src/host_rw/: __mod.rs  filter.rs  get.rs  mod.rs  read.rs  write.rs
test_files/: README.md  h0  hosts  list.read.write.csv  r0  redirect.read.write.csv  w0  wh
