[package]
name = "host-rs"
version = "0.1.1"
edition = "2021"
authors = ["Biswajit Thakur <biswajit733127@gmail.com>"]
homepage = "https://github.com/BiswajitThakur/host-rs"
repository = "https://github.com/BiswajitThakur/host-rs"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
description = "Block Website, Ads, Social, Porn, Fakenews, Gambling, Spam sites and website redirector."
keywords = ["host", "blocker", "website", "url", "redirect"]
categories = ["command-line-utilities"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
regex = "1.10.2"
reqwest = "0.11.23"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
dirs = "5.0.1"
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
crossterm = "0.27.0"
clap = { version = "4.4.18", features = ["cargo", "derive"] }
