[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
storage = { path = "crates/storage" }
host = { path = "crates/host" }

clap = { version = "4.5.15", features = ["cargo", "derive"] }
crossterm = "0.28.1"
dirs = "5.0.1"
indicatif = "0.17"
ureq = { version = "2.10", features = ["socks-proxy", "charset"]}
anyhow = "1.0.86"

