[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
clap = { version = "4.5.15", features = ["cargo", "derive"] }
crossterm = "0.28.1"
dirs = "5.0.1"
ureq = { version = "2.10", features = ["socks-proxy", "charset"]}
anyhow = "1.0.86"
webbrowser = "1.0.2"

