[package]
name = "host-rs"
version = "0.2.2"
edition.workspace = true
authors = ["Biswajit Thakur <biswajit733127@gmail.com>"]
homepage = "https://github.com/BiswajitThakur/host-rs"
repository = "https://github.com/BiswajitThakur/host-rs"
readme = "README.md"
license-file = "LICENSE"
description = "This is a CLI tool to manage website blocking, unblocking, redirection."
keywords = ["host", "blocker", "website", "url", "redirect"]
categories = ["command-line-utilities"]

[dependencies]
host-utils = { path = "../host-utils", version = "0.1.1" }
crossterm = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true }
webbrowser = { workspace = true }
