[package]
name = "host-rs"
version = "1.0.2"
edition.workspace = true
authors = ["Biswajit Thakur <biswajit733127@gmail.com>"]
homepage = "https://github.com/BiswajitThakur/host-rs"
repository = "https://github.com/BiswajitThakur/host-rs"
readme = "README.md"
license-file = "LICENSE"
description = "A CLI tool that manage website blocking, unblocking, redirection."
keywords = ["host", "cli", "web", "url", "redirect"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
colored = { workspace = true }
dirs = "6.0.0"
host-utils = { path = "../host-utils", version = "1.0.2" }
webbrowser = "1.0.3"
