[package]
name = "host-utils"
version = "0.1.2"
license = "MIT"
description = "library to manage website blocking, unblocking, redirection"
edition.workspace = true

[dependencies]
crossterm = { workspace = true }
dirs = { workspace = true }
ureq = { workspace = true }
anyhow = { workspace = true }
