[package]
name = "host-utils"
version = "1.0.0"
license = "MIT"
description = "library to manage website blocking, unblocking, redirection"
edition.workspace = true

[dependencies]
colored = "2.2"
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
ureq = { version = "2.12", features = ["socks-proxy", "charset"]}
